crates/tree-sitter-resin/test/corpus/method_references.txt
==================
Free function references with explicit type arguments
==================
fn example()  {
    let mut first = select::<int, ulong>;
    let mut second = create::<Ptr<int>>;
    select::<int, ulong>(7, 42);
    (select::<int, ulong>)(7, 42);
}
---

(source_file
  (function_definition
    (lid)
    (block_body
      (statement
        (define
          (local_define
            (binding_pattern
              (lid))
            (term
              (assignment_term
                (binary_term
                  (unary_term
                    (postfix_term
                      (primary_term
                        (lid))
                      (type_application
                        (type_arguments
                          (type
                            (infix_type
                              (union_type
                                (unary_type
                                  (primary_type
                                    (builtin_type))))))
                          (type
                            (infix_type
                              (union_type
                                (unary_type
                                  (primary_type
                                    (builtin_type))))))))))))))))
      (statement
        (define
          (local_define
            (binding_pattern
              (lid))
            (term
              (assignment_term
                (binary_term
                  (unary_term
                    (postfix_term
                      (primary_term
                        (lid))
                      (type_application
                        (type_arguments
                          (type
                            (infix_type
                              (union_type
                                (unary_type
                                  (type
                                    (infix_type
                                      (union_type
                                        (unary_type
                                          (primary_type
                                            (builtin_type))))))))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid))
                  (type_application
                    (type_arguments
                      (type
                        (infix_type
                          (union_type
                            (unary_type
                              (primary_type
                                (builtin_type))))))
                      (type
                        (infix_type
                          (union_type
                            (unary_type
                              (primary_type
                                (builtin_type))))))))
                  (arguments
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (number)))))))
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (number))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (closed_term
                      (paren_term
                        (term
                          (assignment_term
                            (binary_term
                              (unary_term
                                (postfix_term
                                  (primary_term
                                    (lid))
                                  (type_application
                                    (type_arguments
                                      (type
                                        (infix_type
                                          (union_type
                                            (unary_type
                                              (primary_type
                                                (builtin_type))))))
                                      (type
                                        (infix_type
                                          (union_type
                                            (unary_type
                                              (primary_type
                                                (builtin_type))))))))))))))))
                  (arguments
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (number)))))))
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (number)))))))))))))))))
