crates/tree-sitter-resin/test/corpus/methods.txt
==================
Method calls and function-valued field calls
==================
struct Item {
 def read(item: Item, value: int) -> int = { value };
};

def calls(item: Item) = { item.read(1); (item.read)(1); Item.read(item, 1); };

---

(source_file
  (struct_definition
    (uid)
    (function_definition
      (lid)
      (declare
        (lid)
        (type
          (infix_type
            (union_type
              (unary_type
                (primary_type
                  (uid)))))))
      (declare
        (lid)
        (type
          (infix_type
            (union_type
              (unary_type
                (primary_type
                  (builtin_type)))))))
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (builtin_type))))))
      (block_body
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid))))))))))
  (function_definition
    (lid)
    (declare
      (lid)
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (uid)))))))
    (block_body
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid))
                  (method_call
                    (lid)
                    (arguments
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (number)))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (closed_term
                      (paren_term
                        (term
                          (assignment_term
                            (binary_term
                              (unary_term
                                (postfix_term
                                  (primary_term
                                    (lid))
                                  (field_access
                                    (lid))))))))))
                  (arguments
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (number))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (unary_type
                      (primary_type
                        (uid))))
                  (method_call
                    (lid)
                    (arguments
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (lid)))))))
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (number))))))))))))))))))
