crates/tree-sitter-resin/test/corpus/operators.txt
==================
Operator declarations on generic structs
==================
struct Number<T> {
 value: T,
 def __add__(left: Number<T>, right: Number<T>) -> Number<T> = { left };
 def __neg__(value: Number<T>) -> Number<T> = { value };
 def __lshift__(value: Number<T>, shift: int) -> Number<T> = { value };
 def __eq__(left: Number<T>, right: Number<T>) -> bool = { true };
};

---

(source_file
  (struct_definition
    (uid)
    (type_parameters
      (uid))
    (declare
      (lid)
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (uid)))))))
    (function_definition
      (lid)
      (declare
        (lid)
        (type
          (infix_type
            (union_type
              (unary_type
                (uid)
                (type_arguments
                  (type
                    (infix_type
                      (union_type
                        (unary_type
                          (primary_type
                            (uid))))))))))))
      (declare
        (lid)
        (type
          (infix_type
            (union_type
              (unary_type
                (uid)
                (type_arguments
                  (type
                    (infix_type
                      (union_type
                        (unary_type
                          (primary_type
                            (uid))))))))))))
      (type
        (infix_type
          (union_type
            (unary_type
              (uid)
              (type_arguments
                (type
                  (infix_type
                    (union_type
                      (unary_type
                        (primary_type
                          (uid)))))))))))
      (block_body
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid)))))))))
    (function_definition
      (lid)
      (declare
        (lid)
        (type
          (infix_type
            (union_type
              (unary_type
                (uid)
                (type_arguments
                  (type
                    (infix_type
                      (union_type
                        (unary_type
                          (primary_type
                            (uid))))))))))))
      (type
        (infix_type
          (union_type
            (unary_type
              (uid)
              (type_arguments
                (type
                  (infix_type
                    (union_type
                      (unary_type
                        (primary_type
                          (uid)))))))))))
      (block_body
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid)))))))))
    (function_definition
      (lid)
      (declare
        (lid)
        (type
          (infix_type
            (union_type
              (unary_type
                (uid)
                (type_arguments
                  (type
                    (infix_type
                      (union_type
                        (unary_type
                          (primary_type
                            (uid))))))))))))
      (declare
        (lid)
        (type
          (infix_type
            (union_type
              (unary_type
                (primary_type
                  (builtin_type)))))))
      (type
        (infix_type
          (union_type
            (unary_type
              (uid)
              (type_arguments
                (type
                  (infix_type
                    (union_type
                      (unary_type
                        (primary_type
                          (uid)))))))))))
      (block_body
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid)))))))))
    (function_definition
      (lid)
      (declare
        (lid)
        (type
          (infix_type
            (union_type
              (unary_type
                (uid)
                (type_arguments
                  (type
                    (infix_type
                      (union_type
                        (unary_type
                          (primary_type
                            (uid))))))))))))
      (declare
        (lid)
        (type
          (infix_type
            (union_type
              (unary_type
                (uid)
                (type_arguments
                  (type
                    (infix_type
                      (union_type
                        (unary_type
                          (primary_type
                            (uid))))))))))))
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (builtin_type))))))
      (block_body
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (boolean)))))))))))
