crates/tree-sitter-resin/test/corpus/optionals.txt
==================
None singleton and ordinary optional unions
==================
type OptionalInt = i32 | None;
fn choose(value: OptionalInt) -> i32  {
    match (value) { i32(number) => { number }, None => { 0 } }
}
fn require(value: OptionalInt) -> i32  { value! }
fn empty() -> None  { None }

---

(source_file
  (type_definition
    (type_define
      (uid)
      (type
        (infix_type
          (union_type
            (union_type
              (unary_type
                (primary_type
                  (builtin_type))))
            (unary_type
              (primary_type
                (builtin_type))))))))
  (function_definition
    (lid)
    (parameter
      (binding_pattern
        (lid))
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (uid)))))))
    (type
      (infix_type
        (union_type
          (unary_type
            (primary_type
              (builtin_type))))))
    (block_body
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (match_term
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (lid)))))))
                    (match_arm
                      (type
                        (infix_type
                          (union_type
                            (unary_type
                              (primary_type
                                (builtin_type))))))
                      (binding_pattern
                        (lid))
                      (block_body
                        (term
                          (assignment_term
                            (binary_term
                              (unary_term
                                (postfix_term
                                  (primary_term
                                    (lid)))))))))
                    (match_arm
                      (block_body
                        (term
                          (assignment_term
                            (binary_term
                              (unary_term
                                (postfix_term
                                  (primary_term
                                    (number))))))))))))))))))
  (function_definition
    (lid)
    (parameter
      (binding_pattern
        (lid))
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (uid)))))))
    (type
      (infix_type
        (union_type
          (unary_type
            (primary_type
              (builtin_type))))))
    (block_body
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (lid))
                (unwrap_suffix))))))))
  (function_definition
    (lid)
    (type
      (infix_type
        (union_type
          (unary_type
            (primary_type
              (builtin_type))))))
    (block_body
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (unary_type
                    (primary_type
                      (builtin_type))))))))))))
