crates/tree-sitter-resin/test/corpus/patterns.txt
==================
Immutable and mutable identifier patterns
==================
fn change(mut parameter: i32, fixed: i32 | None) -> i32 {
    let initial = parameter;
    let mut result: i32;
    match (fixed) {
        i32(mut value) => { value = value + initial; result = value; },
        None => { result = 0; },
    };
    parameter = result;
    parameter
}

---

(source_file
  (function_definition
    (lid)
    (parameter
      (binding_pattern
        (lid))
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (builtin_type)))))))
    (parameter
      (binding_pattern
        (lid))
      (type
        (infix_type
          (union_type
            (union_type
              (unary_type
                (primary_type
                  (builtin_type))))
            (unary_type
              (primary_type
                (builtin_type)))))))
    (type
      (infix_type
        (union_type
          (unary_type
            (primary_type
              (builtin_type))))))
    (block_body
      (statement
        (define
          (local_define
            (binding_pattern
              (lid))
            (term
              (assignment_term
                (binary_term
                  (unary_term
                    (postfix_term
                      (primary_term
                        (lid))))))))))
      (statement
        (parameter
          (binding_pattern
            (lid))
          (type
            (infix_type
              (union_type
                (unary_type
                  (primary_type
                    (builtin_type))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (match_term
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (lid)))))))
                      (match_arm
                        (type
                          (infix_type
                            (union_type
                              (unary_type
                                (primary_type
                                  (builtin_type))))))
                        (binding_pattern
                          (lid))
                        (block_body
                          (statement
                            (term
                              (assignment_term
                                (binary_term
                                  (unary_term
                                    (postfix_term
                                      (primary_term
                                        (lid)))))
                                (assignment_term
                                  (binary_term
                                    (binary_term
                                      (unary_term
                                        (postfix_term
                                          (primary_term
                                            (lid)))))
                                    (binary_term
                                      (unary_term
                                        (postfix_term
                                          (primary_term
                                            (lid))))))))))
                          (statement
                            (term
                              (assignment_term
                                (binary_term
                                  (unary_term
                                    (postfix_term
                                      (primary_term
                                        (lid)))))
                                (assignment_term
                                  (binary_term
                                    (unary_term
                                      (postfix_term
                                        (primary_term
                                          (lid)))))))))))
                      (match_arm
                        (block_body
                          (statement
                            (term
                              (assignment_term
                                (binary_term
                                  (unary_term
                                    (postfix_term
                                      (primary_term
                                        (lid)))))
                                (assignment_term
                                  (binary_term
                                    (unary_term
                                      (postfix_term
                                        (primary_term
                                          (number)))))))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid)))))
            (assignment_term
              (binary_term
                (unary_term
                  (postfix_term
                    (primary_term
                      (lid)))))))))
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (lid))))))))))
