crates/tree-sitter-resin/test/corpus/primitives.txt
==================
Generic intrinsic declaration
==================
intrinsic "pointer_index" fn at<T>(data: Ptr<T>, length: ulong, index: ulong) -> Ptr<T>;
---

(source_file
  (intrinsic_function
    (string)
    (lid)
    (type_parameters
      (uid))
    (parameter
      (binding_pattern
        (lid))
      (type
        (infix_type
          (union_type
            (unary_type
              (type
                (infix_type
                  (union_type
                    (unary_type
                      (primary_type
                        (uid)))))))))))
    (parameter
      (binding_pattern
        (lid))
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (builtin_type)))))))
    (parameter
      (binding_pattern
        (lid))
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (builtin_type)))))))
    (type
      (infix_type
        (union_type
          (unary_type
            (type
              (infix_type
                (union_type
                  (unary_type
                    (primary_type
                      (uid))))))))))))
