crates/tree-sitter-resin/test/corpus/references.txt
==================
References and initialized binding annotations
==================
fn identity<T>(value: Ref<T>) -> Ref<T>  { value }
fn example() -> int  {
    let mut value: int = 1;
    let alias: Ref<_> = identity(value);
    alias = 42;
    value
}
---

(source_file
  (function_definition
    (lid)
    (type_parameters
      (uid))
    (parameter
      (binding_pattern
        (lid))
      (type
        (infix_type
          (union_type
            (unary_type
              (type
                (infix_type
                  (union_type
                    (unary_type
                      (primary_type
                        (uid)))))))))))
    (type
      (infix_type
        (union_type
          (unary_type
            (type
              (infix_type
                (union_type
                  (unary_type
                    (primary_type
                      (uid))))))))))
    (block_body
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (lid)))))))))
  (function_definition
    (lid)
    (type
      (infix_type
        (union_type
          (unary_type
            (primary_type
              (builtin_type))))))
    (block_body
      (statement
        (define
          (local_define
            (binding_pattern
              (lid))
            (type
              (infix_type
                (union_type
                  (unary_type
                    (primary_type
                      (builtin_type))))))
            (term
              (assignment_term
                (binary_term
                  (unary_term
                    (postfix_term
                      (primary_term
                        (number))))))))))
      (statement
        (define
          (local_define
            (binding_pattern
              (lid))
            (type
              (infix_type
                (union_type
                  (unary_type
                    (type
                      (infix_type
                        (union_type
                          (unary_type
                            (primary_type
                              (inferred_type))))))))))
            (term
              (assignment_term
                (binary_term
                  (unary_term
                    (postfix_term
                      (primary_term
                        (lid))
                      (arguments
                        (term
                          (assignment_term
                            (binary_term
                              (unary_term
                                (postfix_term
                                  (primary_term
                                    (lid))))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid)))))
            (assignment_term
              (binary_term
                (unary_term
                  (postfix_term
                    (primary_term
                      (number)))))))))
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (lid))))))))))
